--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 .idea
 .php_cs
 .php_cs.cache
+.php-cs-fixer.cache
 .phpunit.result.cache
 build
 composer.lock
 coverage
 docs
+node_modules
 phpunit.xml
 phpstan.neon
 testbench.yaml
 vendor
-node_modules
-.php-cs-fixer.cache
+yarn.lock
