--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         ":package_slug"
     ],
     "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "license": "MIT",
     "authors": [
         {
             "name": ":author_name",
@@ -26,6 +27,7 @@
         "illuminate/contracts": "^9.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.1",
         "orchestra/testbench": "^7.0",
@@ -61,7 +63,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "kylekatarnls/update-helper": true
         }
     },
     "extra": {
