--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     },
     "require": {
-        "php": "7.3.*",
+        "php": "7.3.*|8.*",
         "illuminate/support": "~5.6.39"
     },
     "require-dev": {
@@ -45,10 +45,8 @@
         }
     },
     "scripts": {
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest coverage",
-        "phpfix": "vendor/bin/phpcbf --standard=phpcs.xml",
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "export XDEBUG_MODE=coverage && vendor/bin/phpunit --coverage-html coverage",
         "phpcs": "vendor/bin/phpcs --standard=phpcs.xml"
     },
     "config": {
