--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
     },
     "require": {
         "php": "7.3.*|8.*",
-        "illuminate/support": "~5.6.39"
+        "illuminate/support": "8.*"
     },
     "require-dev": {
-        "orchestra/testbench": "3.6.7",
+        "orchestra/testbench": "^6.23",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.7",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.5.4"
     },
     "autoload": {
