--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     },
     "require": {
-        "php": "7.3.*|8.*",
+        "php": "7.3.*",
         "illuminate/support": "~5.6.39"
     },
     "require-dev": {
