--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,3 +33,6 @@ updates:
       interval: "weekly"
     labels:
       - "dependencies"
+    commit-message:
+      prefix: "feat"
+      include: "scope"
